<resources>
    <string name="app_name">ChatApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login1">Login</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="email1">EMAIL</string>
    <string name="password1">PASSWORD</string>
    <string name="need_an_account">Need an account?</string>
</resources>